# ghost

./: .gitignore  CONTRIBUTING.md  Makefile  PYPI_README.md  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
app/: __init__.py  chat.py  cli.py  config.py  console.py  init.py  main.py  providers.py  runner.py  spinner.py
ghost/: __init__.py  chat.py  cli.py  config.py  console.py  daemon.py  init.py  job_queue.py  main.py  providers.py  rate_limiter.py  runner.py  spinner.py  write_policy.py
tests/: conftest.py  test_chat.py  test_config.py  test_init.py  test_job_queue.py  test_main.py  test_providers.py  test_rate_limiter.py  test_runner.py
