[project]
name = "ghosttest"
version = "0.2.2.2"
description = "An autonomous local-first AI agent that generates, executes, and self-heals Python unit tests in real-time."
readme = "PYPI_README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Swarnim Tripathi"}
]
keywords = [
    "testing",
    "pytest",
    "ai-agent",
    "test-automation",
    "llm",
    "ollama",
    "groq",
    "self-healing",
    "qa",
    "developer-tools"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: Pytest",
    "Environment :: Console",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.0.0",
    "groq>=0.37.1",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "ruff",
]

[project.scripts]
ghost = "ghost.cli:main"

[project.urls]
Homepage = "https://github.com/tripathiji1312/ghost/tree/main"
Documentation = "https://github.com/tripathiji1312/ghost/tree/main#readme"
Repository = "https://github.com/tripathiji1312/ghost/tree/main"
Issues = "https://github.com/tripathiji1312/ghost/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ghost"]

[tool.hatch.build.targets.sdist]
include = [
    "/ghost",
    "/README.md",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
